--- a/ec/app/views/task/tasks/index.html.erb
+++ b/ec/app/views/task/tasks/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="text-center my-4">タスク一覧</h1>
 
+<div class="alert alert-primary" role="alert">
+  This is a primary alert—check it out!
+</div>
+
 <div class="table-responsive">
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
