ログイン処理追加

--- a/ec/app/views/user/users/new.html.erb
+++ b/ec/app/views/user/users/new.html.erb
@@ -1,7 +1,4 @@
 <section class="vh-100" style="background-color: #eee;">
-<!-- 登録が成功となるか確認 -->
-
-
    <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
@@ -11,16 +8,16 @@
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">ユーザ登録</p>
-
-                  <% if flash[:success] %>
-  <div class="container h-100">
-  <div class="alert alert-success text-center" role="alert">
-    <%= flash[:success] %>
-  </div>
-  </div>
-  <% else %>
-
-                <form class="mx-1 mx-md-4" action="/user/users" method="post">
+                <!-- 登録が成功となるか確認 -->
+                <% if flash[:success] %>
+                  <div class="container h-100">
+                    <div class="alert alert-success text-center" role="alert">
+                      <%= flash[:success] %>
+                    </div>
+                  </div>
+                <% else %>
+                  <!-- 登録が成功しなかった場合の処理 -->
+                  <form class="mx-1 mx-md-4" action="/user/create" method="post">
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
@@ -75,14 +72,12 @@
                     <button  type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg">登録</button>
                   </div>
 
-                </form>
-<% end %>
+                  </form>
+                <% end %>
               </div>
               <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
                   class="img-fluid" alt="Sample image">
-
               </div>
             </div>
           </div>
