--- a/ec/app/views/user/users/login.html.erb
+++ b/ec/app/views/user/users/login.html.erb
@@ -8,15 +8,14 @@
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">ログイン</p>
-
                 <form class="mx-1 mx-md-4" action="/user/auth" method="post">
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
                       <input type="text" id="name" class="form-control" name="name"/>
                       <label class="form-label" for="name">ユーザ名</label>
-                      <% if flash[:errors] && flash[:errors][:name] %>
-                        <span class="text-danger"><%= flash[:errors][:name] %></span>
+                      <% if flash[:error].present? %>
+                        <span class="text-danger"><%= flash[:error] %></span>
                       <% end %>
                     </div>
                   </div>
@@ -26,8 +25,8 @@
                     <div data-mdb-input-init class="form-outline flex-fill mb-0">
                       <input type="password" id="password" class="form-control" name="password"/>
                       <label class="form-label" for="password">パスワード</label>                    
-                      <% if flash[:errors] && flash[:errors][:password] %>
-                        <span class="text-danger"><%= flash[:errors][:password] %></span>
+                      <% if flash[:error].present? %>
+                        <span class="text-danger"><%= flash[:error] %></span>
                       <% end %>
                     </div>
                   </div>
